--- a/style.css
+++ b/style.css
@@ -1,46 +1,72 @@
+:root {
+  --very-dark-blue: hsl(233, 47%, 7%);
+  --dark-desaturated-blue: hsl(244, 38%, 16%);
+  --soft-violet: hsl(277, 64%, 61%);
+  --white: hsl(0, 0%, 100%);
+  --slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
+
 body {
-  background-color: hsl(233, 47%, 7%);
+  background-color: var(--very-dark-blue);
 }
 
-.container-card {
-  background-color: hsl(244, 38%, 16%);
-  display: flex;
-  justify-content: center;
-  margin: 10% auto;
-  width: 970px;
-  height: 100%;
-}
-
-.left-box {
+.main-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  margin: 30px;
+  border-radius: 10px;
+  background-color: var(--dark-desaturated-blue);
 }
 
-.text-content {
-  padding: 40px;
-  color: hsla(0, 0%, 100%, 0.75);
+.image-container img {
+  width: 100%;
+  border-radius: 10px 10px 0 0px;
 }
 
-h1 {
-  margin-bottom: 2rem;
-  color: hsl(0, 0%, 100%);
+.text-container {
+  text-align: center;
+  margin-top: 30px;
+  padding: 10px 15px 10px 15px;
 }
 
-.stats-container {
+.text-container h1 {
+  font-family: 'Inter';
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: var(--white);
+}
+
+.text-container .colored-word {
+  color: var(--soft-violet);
+}
+
+.text-container p {
+  font-family: 'Lexend Deca';
+  font-weight: 400;
+  line-height: 1.6;
+  padding: 0 10px 0 10px;
+  color: var(--slightly-transparent-white);
+}
+
+.stats {
   display: flex;
-  justify-content: space-evenly;
-  margin-top: 2.5rem;
+  flex-direction: column;
+  margin-top: 30px;
 }
 
 .stats-heading {
-  color: hsl(0, 0%, 100%);
+  font-family: 'Inter';
+  font-weight: 700;
+  color: var(--white);
 }
-
 .stats-text {
-  color: hsla(0, 0%, 100%, 0.75);
+  text-transform: uppercase;
+  color: var(--slightly-transparent-white);
 }
